--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
           </div>
           <div class="portfolio">
                 <div class="image">
-                    <img src="images/sawa.jpg">
+                    <img src="images/sawa.JPG">
                 </div>
                 <div class="image">
-                    <img src="images/supreme.jpg">
+                    <img src="images/supreme.JPG">
                 </div>
                 <div class="image">
-                    <img src="images/oficon.jpg">
+                    <img src="images/oficon.JPG">
                 </div>
                 <div class="image">
-                    <img src="images/tritme.jpg">
+                    <img src="images/tritme.JPG">
                 </div>
                 <div class="image">
-                    <img src="images/vibesshare.jpg">
+                    <img src="images/vibesshare.JPG">
                 </div>
                 <div class="image">
-                    <img src="images/jemafrik.png">
+                    <img src="images/jemafrik.PNG">
                 </div>
                
           </div>
