--- a/index.html
+++ b/index.html
@@ -34,23 +34,9 @@
           <div class="about">
                
                 <p>
-                    It is a long established fact that a reader will be distracted by the 
-                    readable content of a page when looking at its layout. The point of using 
-                    Lorem Ipsum is that it has a more-or-less normal distribution of letters, 
-                    as opposed to using 'Content here, content here', making it look like readable English.  <br>
-                    Many desktop publishing packages and web page editors now use Lorem Ipsum as their default 
-                    model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.  <br>
-                    Various versions have evolved over the years, 
-                    sometimes by accident, sometimes on purpose (injected humour and the like). 
-                </p>
-                <p>
-                    It is a long established fact that a reader will be distracted by the 
-                    readable content of a page when looking at its layout. The point of using  
-                    Lorem Ipsum is that it has a more-or-less normal distribution of letters, 
-                    as opposed to using 'Content here, content here', making it look like readable English.  <br>
-                    Many desktop publishing packages and web page editors now use Lorem Ipsum as their default 
-                    model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.  <br>
-                   
+                        Results-oriented Web Application Developer and Online Business Developer with considerable training and enterprise 
+                        experience in Web Development and layout and in all stages of design, coding, and testing of Web applications, 
+                        and in the formation, planning, and implementation of online business ventures. I am passionate about IT and anything Tech related.
                 </p>
                 <p style="font-weight:bold; font-size: 24px;" ondblclick="myFunction2()">Doubleclick this paragraph to see more...</p>
 
